# summoning-circle

./: .gitignore  Cargo.toml  README.md
src/: agent.rs  env.rs  main.rs  metaprompts.rs  notes.rs  openai.rs  prompts.rs  subtext.rs
