[package]
name = "prompt-manager-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15.0"
serde_json = "1.0.94"
rand = "0.8.5"